--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -7,6 +7,6 @@ div#wall div.parent #tag-4 {
   display:none;
 }
 
-div#wall div.parent #tag-5.slick {
+#wall div.parent #tag-5.slick {
   display:none;
 }
