--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,6 +11,6 @@ div#wall div.parent div#tag-5.slick {
   display:none;
 }
 
-div#wall div.parent div:nth-child(2) div#tag-6 {
+div#wall div:nth-child(6).parent div:nth-child(2) div#tag-6 {
   display:none;
 }
