Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,3 +14,7 @@ div#wall div.parent div#tag-5.slick {
 div#wall div:nth-child(6).parent div:nth-child(2) div#tag-6 {
   display:none;
 }
+
+div#wall div:nth-child(7).parent div:nth-child(1) div:nth-child(1)#tag-7.slick {
+  display:none;
+}
