--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,4 +1,20 @@
 /* write your override styles here */
-div#wall div, div.parent #tag-4, div.parent div#tag-5.slick, div:nth-child(6).parent div:nth-child(2) div#tag-6, div:nth-child(7).parent div:nth-child(1) div:nth-child(1)#tag-7.slick {
+div#wall div {
+  display:none;
+}
+
+div#wall div.parent #tag-4 {
+  display:none;
+}
+
+div#wall div.parent div#tag-5.slick {
+  display:none;
+}
+
+div#wall div:nth-child(6).parent div:nth-child(2) div#tag-6 {
+  display:none;
+}
+
+div#wall div:nth-child(7).parent div:nth-child(1) div:nth-child(1)#tag-7.slick {
   display:none;
 }
