--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,5 +1,13 @@
 /* write your override styles here */
-div#wall div {
+div#wall div#tag-1 {
+  display:none;
+}
+
+div#wall div:nth-child(2)#tag-2 {
+  display:none;
+}
+
+div#wall div:nth-child(3)#tag-3.slick {
   display:none;
 }
 
